workshop4/weather/weather-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: weather-ingress-vs

spec:
  hosts:
  - "*"
  gateways:
  - weather-ingress
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination: 
        host: weatherapp-svc
        port: 
          number: 80
